--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ drf-spectacular = "~=0.23.1"
 whitenoise = "*"
 django-widget-tweaks = "*"
 argon2-cffi = "*"
+django-typomatic = "*"
 
 [dev-packages]
 django-stubs = "*"
