--- a/docker/dev/docker-compose.yml
+++ b/docker/dev/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     working_dir: /app
     depends_on:
       - postgres
+      - smtp-server
     volumes:
       - type: bind
         source: ../..
@@ -28,6 +29,14 @@ services:
       - "localhost:172.17.0.1"
     ports:
       - "8000:8000"
+  smtp-server:
+    image: mailhog/mailhog:v1.0.1
+    expose:
+      - 1025
+      - 8025
+    ports:
+      - '1025:1025'
+      - '8025:8025'
   postgres:
     image: postgres:14.4
     container_name: ati2p_postgres
