first commit, added vehicle create and edit sections

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es5",
     "baseUrl": ".",
     "paths": {
-      "djtypes/*": ["../backend/tstypes/*"]
+      "djtypes/*": ["../backend/tstypes/*"],
+      "@/styles/*": ["styles/*"]
     },
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
