--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "next": "latest",
+    "next-intl": "^2.9.1",
     "react": "latest",
     "react-dom": "latest",
     "rsuite": "^5.18.1"
