--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@rsuite/icons": "^1.0.2",
     "backend": "*",
     "css-loader": "^6.7.1",
+    "dayjs": "^1.11.6",
     "immutability-helper": "^3.1.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
@@ -22,6 +23,7 @@
     "next-intl": "^2.9.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-phone-number-input": "^3.2.12",
     "rsuite": "^5.18.1"
   },
   "devDependencies": {
