feat: add ipython to django

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ django-widget-tweaks = "*"
 argon2-cffi = "*"
 django-typomatic = "*"
 pillow = "*"
+ipython = "*"
 
 [dev-packages]
 django-stubs = "*"
